2024-03-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.2-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha03: Monkeybaut IPA';git push
	git tag -a 5.2.2-alpha03 -m 'diwg_chk RFC #s;';git push --tags

	* ncchecker abstract all tests into template that uses info from test definition table

	* ncchecker implement flexible test selection logic

	* Rename diwg_chk to ncchecker

2024-03-05  Charlie Zender  <zender@uci.edu>

	* diwg_chk: Add RFC recommendation numbers, sort tests in that order

	* NCO 5.2.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha02: Broken Molar';git push
	git tag -a 5.2.2-alpha02 -m 'diwg_chk; ncremap: --monotonicity';git push --tags

	* Let it be known that ncap2 started linking correctly with MacOS again today

	* Add diwg_chk, support distribution in autotools and CMake

2024-02-27  Charlie Zender  <zender@uci.edu>

	* ncremap: Walter Hannah changed mbtempest argument name from "monotonic" to "monotonicity"

2024-02-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha01: IRS 1040';git push
	git tag -a 5.2.2-alpha01 -m 'Functionally identical to 5.2.1 (adds -lgslcblas, fix andes paths)';git push --tags

	* ncremap/ncclimo/configure.eg change Andes E3SMU paths to /ccs/proj/cli115/software/e3sm-unified

	* bld/Makefile, nco++/Makefile add -lgslcblas for Derecho

2024-02-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.1: Shabu Shabu';git push
	git tag -a 5.2.1 -m 'Functionally identical to 5.2.0 (except compiles with bld/Makefile, fixes ncclimo/ncremap syntax)';git push --tags

2024-02-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.1-alpha01: Engoron';git push