@@ -1,8 +1,16 @@
-2024-03-07  Charlie Zender  <zender@uci.edu>
+2024-03-20  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.2-alpha03 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha03: Monkeybaut IPA';git push
-	git tag -a 5.2.2-alpha03 -m 'diwg_chk RFC #s;';git push --tags
+	git tag -a 5.2.2-alpha03 -m 'ncchecker RFC #s, tst_lst;ncremap xcl level';git push --tags
+
+	* ncremap: add "level" to exclusion list for vertical interpolation
+
+2024-03-15  Charlie Zender  <zender@uci.edu>
+
+	* Clarify use of $caseid in ncclimo for non-standard filenames
+
+2024-03-07  Charlie Zender  <zender@uci.edu>
 
 	* ncchecker abstract all tests into template that uses info from test definition table
 
